[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/levelScript.gd" type="Script" id=1]
[ext_resource path="res://levels/common/commonWorldEnvironment.tscn" type="PackedScene" id=2]
[ext_resource path="res://sceneObjects/UI/CoinUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/DELETEME/japan-casino-696x522.jpg" type="Texture" id=4]
[ext_resource path="res://levels/Casino/casinotiles.tres" type="MeshLibrary" id=5]
[ext_resource path="res://sceneObjects/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://sceneObjects/portdoor.tscn" type="PackedScene" id=7]
[ext_resource path="res://sceneObjects/NPC.tscn" type="PackedScene" id=8]
[ext_resource path="res://levels/Casino/CatgirlDoorway.gd" type="Script" id=9]
[ext_resource path="res://assets/npcs/catportrait.png" type="Texture" id=10]
[ext_resource path="res://levels/Casino/CatgirlDoorwayAbortSound.gd" type="Script" id=11]
[ext_resource path="res://assets/npcs/catgirl.png" type="Texture" id=12]
[ext_resource path="res://sceneObjects/TextBox.tscn" type="PackedScene" id=13]
[ext_resource path="res://levels/Casino/CatgirlDoorwayAbortSound2.gd" type="Script" id=14]
[ext_resource path="res://levels/Casino/coin.tscn" type="PackedScene" id=15]
[ext_resource path="res://levels/Casino/Vase.tscn" type="PackedScene" id=16]
[ext_resource path="res://levels/Casino/ShinyVase.tscn" type="PackedScene" id=17]
[ext_resource path="res://sceneObjects/Costume.tscn" type="PackedScene" id=18]
[ext_resource path="res://levels/Casino/Speedboost.tscn" type="PackedScene" id=19]
[ext_resource path="res://levels/Casino/CatMachine.tscn" type="PackedScene" id=20]

[node name="level" type="Node"]
script = ExtResource( 1 )

[node name="commonWorldEnvironment" parent="." instance=ExtResource( 2 )]

[node name="CoinUI" parent="." instance=ExtResource( 3 )]

[node name="BackgroundControl" type="Control" parent="."]
editor/display_folded = true

[node name="TextureRect" type="TextureRect" parent="BackgroundControl"]
margin_left = 5.0
margin_top = 1.0
margin_right = 1144.0
margin_bottom = 806.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="Level Tiles" type="GridMap" parent="."]
mesh_library = ExtResource( 5 )
data = {
"cells": PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 65533, 1, 0, 65534, 1, 536870912, 65535, 1, 0, 0, 2, 0, 65535, 2, 0, 0, 3, 0, 65535, 3, 0, 0, 65524, 0, 65535, 65524, 0, 0, 65525, 0, 65535, 65525, 0, 327680, 65525, 0, 327681, 65525, 0, 327682, 65525, 0, 327683, 65525, 0, 327684, 65525, 0, 327685, 65525, 0, 393213, 65525, 0, 393214, 65525, 0, 393215, 65525, 0, 0, 65526, 0, 1, 65526, 0, 2, 65526, 0, 3, 65526, 0, 4, 65526, 0, 5, 65526, 0, 65533, 65526, 0, 65534, 65526, 0, 65535, 65526, 0, 65537, 65526, 0, 65538, 65526, 0, 65539, 65526, 0, 65540, 65526, 0, 65541, 65526, 0, 131069, 65526, 0, 131070, 65526, 0, 131073, 65526, 0, 131074, 65526, 0, 131075, 65526, 0, 131076, 65526, 0, 131077, 65526, 0, 196605, 65526, 0, 196606, 65526, 0, 196608, 65526, 0, 196609, 65526, 0, 196610, 65526, 0, 196611, 65526, 0, 196612, 65526, 0, 196613, 65526, 0, 262141, 65526, 0, 262142, 65526, 0, 262143, 65526, 0, 262144, 65526, 0, 262145, 65526, 0, 262146, 65526, 0, 262147, 65526, 0, 262148, 65526, 0, 262149, 65526, 0, 327677, 65526, 0, 327678, 65526, 0, 327679, 65526, 0, 327680, 65526, 0, 327681, 65526, 0, 327682, 65526, 0, 327683, 65526, 0, 327684, 65526, 0, 327685, 65526, 0, 393213, 65526, 0, 393214, 65526, 0, 393215, 65526, 0, 0, 65527, 0, 1, 65527, 0, 2, 65527, 0, 3, 65527, 0, 4, 65527, 0, 5, 65527, 0, 65533, 65527, 0, 65534, 65527, 0, 65535, 65527, 0, 196610, 65527, 0, 327678, 65527, 0, 0, 65528, 0, 1, 65528, 0, 2, 65528, 0, 3, 65528, 0, 4, 65528, 0, 5, 65528, 0, 65533, 65528, 0, 65534, 65528, 0, 65535, 65528, 0, 0, 65529, 0, 1, 65529, 0, 2, 65529, 0, 3, 65529, 0, 4, 65529, 0, 5, 65529, 536870912, 6, 65529, 0, 7, 65529, 0, 65533, 65529, 0, 65534, 65529, 0, 65535, 65529, 0, 0, 65530, 0, 1, 65530, 0, 2, 65530, 0, 3, 65530, 0, 4, 65530, 0, 5, 65530, 0, 6, 65530, 0, 7, 65530, 0, 65533, 65530, 0, 65534, 65530, 0, 65535, 65530, 0, 0, 65531, 0, 1, 65531, 0, 2, 65531, 0, 3, 65531, 0, 4, 65531, 0, 5, 65531, 0, 65533, 65531, 0, 65534, 65531, 0, 65535, 65531, 0, 0, 65532, 0, 1, 65532, 0, 2, 65532, 0, 65533, 65532, 0, 65534, 65532, 0, 65535, 65532, 0, 0, 65533, 0, 1, 65533, 0, 2, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 0, 0, 65534, 0, 1, 65534, 0, 2, 65534, 0, 65533, 65534, 0, 65534, 65534, 0, 65535, 65534, 0, 0, 65535, 0, 1, 65535, 0, 2, 65535, 0, 65533, 65535, 0, 65534, 65535, 0, 65535, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="LevelTiles2" type="GridMap" parent="."]
mesh_library = ExtResource( 5 )
cell_center_x = false
cell_center_z = false
data = {
"cells": PoolIntArray( 65538, 1, 0, 131070, 1, 0, 65541, 65528, 0, 131070, 65528, 0, 65538, 65531, 0, 131070, 65531, 0, 65538, 65534, 0, 131070, 65534, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="Player" parent="." instance=ExtResource( 6 )]

[node name="portalTownCasino" parent="." instance=ExtResource( 7 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 3.4124, 6.95208 )
connectedScene = "DebugTown_old.tscn"

[node name="portalCasinoBoss" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4124, -21.0479 )
midLevelDir = "Casino"
connectedScene = "CasinoSceneBoss"

[node name="CatgirlDoorway" parent="." instance=ExtResource( 8 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0862962, 3.5133, -18.7185 )
script = ExtResource( 9 )

[node name="CollisionShape" parent="CatgirlDoorway" index="0"]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, -0.0947247, 0, -0.461863 )

[node name="Portrait" parent="CatgirlDoorway/NPC TextBox/TextBox" index="0"]
texture = ExtResource( 10 )

[node name="Text" parent="CatgirlDoorway/NPC TextBox/TextBox" index="1"]
bbcode_text = "hey!!!! do you want
to get by me?
i'll move for 20 G."
text = "hey!!!! do you want
to get by me?
i'll move for 20 G."

[node name="DialogSound" parent="CatgirlDoorway/NPC TextBox/TextBox" index="2"]
script = ExtResource( 11 )

[node name="Sprite3D" parent="CatgirlDoorway" index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.34321, 0.454064, 0 )
pixel_size = 0.14
texture = ExtResource( 12 )
vframes = 4
hframes = 4

[node name="GotCoin TextBox" parent="CatgirlDoorway" instance=ExtResource( 13 )]
editor/display_folded = true

[node name="Portrait" parent="CatgirlDoorway/GotCoin TextBox/TextBox" index="0"]
texture = ExtResource( 10 )

[node name="Text" parent="CatgirlDoorway/GotCoin TextBox/TextBox" index="1"]
bbcode_text = "oh dope!!
you got 20g! 
*yoink*"
text = "oh dope!!
you got 20g! 
*yoink*"

[node name="AbortSound" parent="CatgirlDoorway/GotCoin TextBox/TextBox" index="3"]
script = ExtResource( 14 )

[node name="FinalTextBox" parent="CatgirlDoorway" instance=ExtResource( 13 )]
editor/display_folded = true

[node name="Portrait" parent="CatgirlDoorway/FinalTextBox/TextBox" index="0"]
texture = ExtResource( 10 )

[node name="Text" parent="CatgirlDoorway/FinalTextBox/TextBox" index="1"]
bbcode_text = "we all have needs.
and that's ok."
text = "we all have needs.
and that's ok."

[node name="coins" type="Node" parent="."]
editor/display_folded = true

[node name="coin3" parent="coins" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 6, -4 )

[node name="coin4" parent="coins" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 6, -4 )

[node name="coin5" parent="coins" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 6, -10 )

[node name="coin6" parent="coins" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 6, -10 )

[node name="coin7" parent="coins" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 6, -16 )

[node name="coin8" parent="coins" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 6, -16 )

[node name="coin9" parent="coins" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 1 )

[node name="coin10" parent="coins" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -1 )

[node name="coin11" parent="coins" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -4 )

[node name="coin12" parent="coins" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -7 )

[node name="coin13" parent="coins" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -10 )

[node name="coin14" parent="coins" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -13 )

[node name="vases" type="Node" parent="."]

[node name="Vase" parent="vases" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 5, 2 )

[node name="Vase2" parent="vases" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 5, 2 )

[node name="Vase3" parent="vases" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 5, -4 )

[node name="Vase4" parent="vases" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 5, -4 )

[node name="Vase5" parent="vases" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 5, -10 )

[node name="Vase6" parent="vases" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 5, -10 )

[node name="Vase8" parent="vases" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 5, -16 )

[node name="ShinyVase" parent="vases" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.484, 9, -17 )

[node name="Costume" parent="." instance=ExtResource( 18 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.48445, 3.2514, -0.79153 )

[node name="Sprite3D" parent="Costume" index="3"]
frame = 6

[node name="Speedboost" parent="." instance=ExtResource( 19 )]
transform = Transform( -4.60149e-008, -1, -7.81957e-008, 0.0871555, -8.19086e-008, 0.996195, -0.996195, 3.90245e-008, 0.0871555, 12, 3.20625, -11 )

[node name="CatMachine" parent="." instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 5, -16 )

[editable path="CatgirlDoorway"]

[editable path="CatgirlDoorway/NPC TextBox"]

[editable path="CatgirlDoorway/GotCoin TextBox"]

[editable path="CatgirlDoorway/FinalTextBox"]

[editable path="Costume"]
